force-app/main/default/objects/Question__c/fields/Choice3__c.field-meta.xml
<CustomField>
    <fullName>Choice3__c</fullName>
    <label>Choice3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>