force-app/main/default/objects/Question__c/fields/Choice5__c.field-meta.xml
<CustomField>
    <fullName>Choice5__c</fullName>
    <label>Choice5</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>