force-app/main/default/objects/Question__c/fields/Custom_Tag_Key_2__c.field-meta.xml
<CustomField>
    <fullName>Custom_Tag_Key_2__c</fullName>
    <label>Custom Tag Key 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>