force-app/main/default/objects/Question__c/fields/Custom_Tag_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Custom_Tag_Value_1__c</fullName>
    <label>Custom Tag Value 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>