force-app/main/default/objects/Question__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <label>Exam</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Exam__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>&quot;Standard Exam&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>