force-app/main/default/objects/Question__c/fields/Flex_Tag_4__c.field-meta.xml
<CustomField>
    <fullName>Flex_Tag_4__c</fullName>
    <label>Flex Tag 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>