force-app/main/default/objects/Question__c/fields/Has_Image__c.field-meta.xml
<CustomField>
    <fullName>Has_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Image</label>
    <type>Checkbox</type>
</CustomField>