force-app/main/default/objects/Question__c/fields/Hint__c.field-meta.xml
<CustomField>
    <fullName>Hint__c</fullName>
    <label>Hint</label>
    <type>TextArea</type>
</CustomField>