force-app/main/default/objects/Question__c/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <inlineHelpText>Upload only JPEG / JPG images here.  Do not type text in this field</inlineHelpText>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>