force-app/main/default/objects/Question__c/fields/Quest__c.field-meta.xml
<CustomField>
    <fullName>Quest__c</fullName>
    <description>Holds the question</description>
    <label>Question Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>