force-app/main/default/objects/Question__c/fields/Reuse_image__c.field-meta.xml
<CustomField>
    <fullName>Reuse_image__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reuse image from previous question</inlineHelpText>
    <label>Reuse image</label>
    <type>Checkbox</type>
</CustomField>