force-app/main/default/objects/Question__c/fields/Reuse_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Reuse_Image_URL__c</fullName>
    <label>Reuse Image URL</label>
    <type>TextArea</type>
</CustomField>