force-app/main/default/objects/Question__c/recordTypes/Multiple_answer.recordType-meta.xml
<RecordType>
    <fullName>Multiple_answer</fullName>
    <active>false</active>
    <description>Multiple answer choices - all need to be right</description>
    <label>Multiple answer</label>
</RecordType>