force-app/main/default/objects/Question__c/recordTypes/Single_answer.recordType-meta.xml
<RecordType>
    <fullName>Single_answer</fullName>
    <active>true</active>
    <description>Only one right answer choice</description>
    <label>Single answer</label>
</RecordType>