force-app/main/default/objects/Question__c/validationRules/Blanks_Before_Non_Blanks.validationRule-meta.xml
<ValidationRule>
    <fullName>Blanks_Before_Non_Blanks</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Choice1__c) &amp;&amp; NOT (ISBLANK(Choice2__c) &amp;&amp; ISBLANK(Choice3__c) &amp;&amp; ISBLANK(Choice4__c) &amp;&amp; ISBLANK(Choice5__c) &amp;&amp; ISBLANK(Choice6__c) &amp;&amp; ISBLANK(Choice7__c)) ||
ISBLANK(Choice2__c) &amp;&amp; NOT (ISBLANK(Choice3__c) &amp;&amp; ISBLANK(Choice4__c) &amp;&amp; ISBLANK(Choice5__c) &amp;&amp; ISBLANK(Choice6__c) &amp;&amp; ISBLANK(Choice7__c)) ||
ISBLANK(Choice3__c) &amp;&amp; NOT (ISBLANK(Choice4__c) &amp;&amp; ISBLANK(Choice5__c) &amp;&amp; ISBLANK(Choice6__c) &amp;&amp; ISBLANK(Choice7__c)) ||
ISBLANK(Choice4__c) &amp;&amp; NOT (ISBLANK(Choice5__c) &amp;&amp; ISBLANK(Choice6__c) &amp;&amp; ISBLANK(Choice7__c)) ||
ISBLANK(Choice5__c) &amp;&amp; NOT (ISBLANK(Choice6__c) &amp;&amp; ISBLANK(Choice7__c)) ||
ISBLANK(Choice6__c) &amp;&amp; NOT (ISBLANK(Choice7__c))</errorConditionFormula>
    <errorMessage>Blank choices must not precede non blank choices</errorMessage>
</ValidationRule>