force-app/main/default/objects/Question__c/validationRules/Both_Image_and_Reuse_Image_URL_supplied.validationRule-meta.xml
<ValidationRule>
    <fullName>Both_Image_and_Reuse_Image_URL_supplied</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(image__c) = 0</errorConditionFormula>
    <errorMessage>Provide an image or a Reuse Image url, but not both</errorMessage>
</ValidationRule>