force-app/main/default/objects/Question__c/validationRules/Reuse_Image_Check_But_Image_Uploaded.validationRule-meta.xml
<ValidationRule>
    <fullName>Reuse_Image_Check_But_Image_Uploaded</fullName>
    <active>false</active>
    <errorConditionFormula>(Reuse_image__c = TRUE) &amp;&amp; (Len( image__c ) &gt; 0)</errorConditionFormula>
    <errorMessage>Reuse image checked but image supplied</errorMessage>
</ValidationRule>