force-app/main/default/objects/Question__c/validationRules/Reuse_Image_Check_But_No_Reuse_Image_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Reuse_Image_Check_But_No_Reuse_Image_URL</fullName>
    <active>false</active>
    <errorConditionFormula>((Reuse_image__c = TRUE) &amp;&amp; ISBLANK( Reuse_Image_URL__c ))</errorConditionFormula>
    <errorMessage>You need to supply a reuse image url</errorMessage>
</ValidationRule>