force-app/main/default/objects/Question__c/validationRules/Reuse_image_not_check_but_url_supplied.validationRule-meta.xml
<ValidationRule>
    <fullName>Reuse_image_not_check_but_url_supplied</fullName>
    <active>false</active>
    <errorConditionFormula>(Reuse_image__c = FALSE) &amp;&amp; NOT ISBLANK( Reuse_Image_URL__c )</errorConditionFormula>
    <errorMessage>Reuse image checkbox is not checked but image url supplied</errorMessage>
</ValidationRule>