force-app/main/default/objects/Question__c/listViews/My_Questions_List.listView-meta.xml
<ListView>
    <fullName>My_Questions_List</fullName>
    <columns>NAME</columns>
    <columns>Quest__c</columns>
    <columns>Topics__c</columns>
    <columns>Subjects__c</columns>
    <columns>Difficulty__c</columns>
    <columns>Tags__c</columns>
    <columns>Flex_Tag_1__c</columns>
    <columns>Flex_Tag_2__c</columns>
    <columns>Flex_Tag_3__c</columns>
    <columns>Hint__c</columns>
    <columns>Image_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Questions List</label>
</ListView>